HW3/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DECLARE
    DO
    LBRACKET
    NEWLINE
    NUMBER
    RBRACKET
    STRING
    SYMBOLS
    TERMINALS

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> class_decl
Rule 3     program -> class_decl program
Rule 4     class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
Rule 5     class_decl -> CLASS ID LBRACE class_body_decl RBRACE
Rule 6     class_body_decl -> class_body_sub_decls
Rule 7     class_body_sub_decls -> field_decl SEMICOLON class_body_sub_decls
Rule 8     class_body_sub_decls -> method_decl class_body_sub_decls
Rule 9     class_body_sub_decls -> constructor_decl class_body_sub_decls
Rule 10    class_body_sub_decls -> empty
Rule 11    field_decl -> modifier var_decl
Rule 12    modifier -> PUBLIC STATIC
Rule 13    modifier -> PRIVATE STATIC
Rule 14    modifier -> PUBLIC
Rule 15    modifier -> PRIVATE
Rule 16    modifier -> STATIC
Rule 17    modifier -> empty
Rule 18    var_decl -> type variables
Rule 19    type -> INT
Rule 20    type -> FLOAT
Rule 21    type -> BOOLEAN
Rule 22    type -> VOID
Rule 23    type -> ID
Rule 24    variables -> variable
Rule 25    variables -> variables COMMA variable
Rule 26    variables -> empty
Rule 27    variable -> ID
Rule 28    method_decl -> modifier type ID LPAREN RPAREN block
Rule 29    method_decl -> modifier VOID ID LPAREN RPAREN block
Rule 30    method_decl -> modifier type ID LPAREN formals RPAREN block
Rule 31    method_decl -> modifier VOID ID LPAREN formals RPAREN block
Rule 32    method_decl -> modifier ID LPAREN RPAREN block
Rule 33    method_decl -> modifier ID LPAREN formals RPAREN block
Rule 34    constructor_decl -> modifier ID LPAREN RPAREN block
Rule 35    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 36    formals -> formals COMMA formal_param
Rule 37    formals -> formal_param
Rule 38    formals -> empty
Rule 39    formal_param -> type variable
Rule 40    block -> LBRACE stmt RBRACE
Rule 41    stmt -> IF LPAREN expr RPAREN stmt
Rule 42    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 43    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 44    stmt -> FOR LPAREN stmt_expr SEMICOLON expr SEMICOLON stmt_expr RPAREN stmt
Rule 45    stmt -> RETURN SEMICOLON stmt
Rule 46    stmt -> RETURN expr SEMICOLON stmt
Rule 47    stmt -> stmt_expr SEMICOLON stmt
Rule 48    stmt -> BREAK SEMICOLON stmt
Rule 49    stmt -> CONTINUE SEMICOLON stmt
Rule 50    stmt -> block stmt
Rule 51    stmt -> var_decl SEMICOLON stmt
Rule 52    stmt -> SEMICOLON stmt
Rule 53    stmt -> empty
Rule 54    literal -> INTCONST
Rule 55    literal -> FLOATCONST
Rule 56    literal -> STRINGCONST
Rule 57    literal -> NULL
Rule 58    literal -> TRUE
Rule 59    literal -> FALSE
Rule 60    primary -> literal
Rule 61    primary -> THIS
Rule 62    primary -> SUPER
Rule 63    primary -> LPAREN expr RPAREN
Rule 64    primary -> NEW ID LPAREN arguments RPAREN
Rule 65    primary -> NEW ID LPAREN RPAREN
Rule 66    primary -> lhs
Rule 67    primary -> method_invocation
Rule 68    arguments -> expr
Rule 69    arguments -> arguments COMMA expr
Rule 70    arguments -> empty
Rule 71    lhs -> field_access
Rule 72    field_access -> primary PERIOD ID
Rule 73    field_access -> ID
Rule 74    method_invocation -> field_access LPAREN RPAREN
Rule 75    method_invocation -> field_access LPAREN arguments RPAREN
Rule 76    expr -> primary
Rule 77    expr -> assign
Rule 78    expr -> expr arith_op expr
Rule 79    expr -> expr bool_op expr
Rule 80    expr -> unary_op expr
Rule 81    assign -> lhs EQUALS expr
Rule 82    assign -> lhs PLUSPLUS
Rule 83    assign -> PLUSPLUS lhs
Rule 84    assign -> lhs MINUSMINUS
Rule 85    assign -> MINUSMINUS lhs
Rule 86    arith_op -> PLUS
Rule 87    arith_op -> MINUS
Rule 88    arith_op -> TIMES
Rule 89    arith_op -> DIVIDE
Rule 90    bool_op -> AND
Rule 91    bool_op -> OR
Rule 92    bool_op -> EQUALSCOMPARE
Rule 93    bool_op -> NOTEQUALS
Rule 94    bool_op -> LESSTHAN
Rule 95    bool_op -> GREATERTHAN
Rule 96    bool_op -> LESSTHANOREQ
Rule 97    bool_op -> GREATERTHANOREQ
Rule 98    unary_op -> PLUS
Rule 99    unary_op -> MINUS
Rule 100   unary_op -> NOT
Rule 101   stmt_expr -> assign
Rule 102   stmt_expr -> method_invocation

Terminals, with rules where they appear

AND                  : 90
BOOLEAN              : 21
BREAK                : 48
CLASS                : 4 5
COMMA                : 25 36 69
CONTINUE             : 49
DECLARE              : 
DIVIDE               : 89
DO                   : 
ELSE                 : 42
EQUALS               : 81
EQUALSCOMPARE        : 92
EXTENDS              : 4
FALSE                : 59
FLOAT                : 20
FLOATCONST           : 55
FOR                  : 44
GREATERTHAN          : 95
GREATERTHANOREQ      : 97
ID                   : 4 4 5 23 27 28 29 30 31 32 33 34 35 64 65 72 73
IF                   : 41 42
INT                  : 19
INTCONST             : 54
LBRACE               : 4 5 40
LBRACKET             : 
LESSTHAN             : 94
LESSTHANOREQ         : 96
LPAREN               : 28 29 30 31 32 33 34 35 41 42 43 44 63 64 65 74 75
MINUS                : 87 99
MINUSMINUS           : 84 85
NEW                  : 64 65
NEWLINE              : 
NOT                  : 100
NOTEQUALS            : 93
NULL                 : 57
NUMBER               : 
OR                   : 91
PERIOD               : 72
PLUS                 : 86 98
PLUSPLUS             : 82 83
PRIVATE              : 13 15
PUBLIC               : 12 14
RBRACE               : 4 5 40
RBRACKET             : 
RETURN               : 45 46
RPAREN               : 28 29 30 31 32 33 34 35 41 42 43 44 63 64 65 74 75
SEMICOLON            : 7 44 44 45 46 47 48 49 51 52
STATIC               : 12 13 16
STRING               : 
STRINGCONST          : 56
SUPER                : 62
SYMBOLS              : 
TERMINALS            : 
THIS                 : 61
TIMES                : 88
TRUE                 : 58
VOID                 : 22 29 31
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

arguments            : 64 69 75
arith_op             : 78
assign               : 77 101
block                : 28 29 30 31 32 33 34 35 50
bool_op              : 79
class_body_decl      : 4 5
class_body_sub_decls : 6 7 8 9
class_decl           : 2 3
constructor_decl     : 9
empty                : 10 17 26 38 53 70
expr                 : 41 42 43 44 46 63 68 69 78 78 79 79 80 81
field_access         : 71 74 75
field_decl           : 7
formal_param         : 36 37
formals              : 30 31 33 35 36
lhs                  : 66 81 82 83 84 85
literal              : 60
method_decl          : 8
method_invocation    : 67 102
modifier             : 11 28 29 30 31 32 33 34 35
primary              : 72 76
program              : 3 0
stmt                 : 40 41 42 42 43 44 45 46 47 48 49 50 51 52
stmt_expr            : 44 44 47
type                 : 18 28 30 39
unary_op             : 80
var_decl             : 11 51
variable             : 24 25 39
variables            : 18 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . class_decl
    (3) program -> . class_decl program
    (4) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE

    CLASS           shift and go to state 3

    program                        shift and go to state 1
    class_decl                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (2) program -> class_decl .
    (3) program -> class_decl . program
    (2) program -> . class_decl
    (3) program -> . class_decl program
    (4) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE

    $end            reduce using rule 2 (program -> class_decl .)
    CLASS           shift and go to state 3

    class_decl                     shift and go to state 2
    program                        shift and go to state 4

state 3

    (4) class_decl -> CLASS . ID EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> CLASS . ID LBRACE class_body_decl RBRACE

    ID              shift and go to state 5


state 4

    (3) program -> class_decl program .

    $end            reduce using rule 3 (program -> class_decl program .)


state 5

    (4) class_decl -> CLASS ID . EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> CLASS ID . LBRACE class_body_decl RBRACE

    EXTENDS         shift and go to state 6
    LBRACE          shift and go to state 7


state 6

    (4) class_decl -> CLASS ID EXTENDS . ID LBRACE class_body_decl RBRACE

    ID              shift and go to state 8


state 7

    (5) class_decl -> CLASS ID LBRACE . class_body_decl RBRACE
    (6) class_body_decl -> . class_body_sub_decls
    (7) class_body_sub_decls -> . field_decl SEMICOLON class_body_sub_decls
    (8) class_body_sub_decls -> . method_decl class_body_sub_decls
    (9) class_body_sub_decls -> . constructor_decl class_body_sub_decls
    (10) class_body_sub_decls -> . empty
    (11) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LPAREN RPAREN block
    (29) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) method_decl -> . modifier ID LPAREN RPAREN block
    (33) method_decl -> . modifier ID LPAREN formals RPAREN block
    (34) constructor_decl -> . modifier ID LPAREN RPAREN block
    (35) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (1) empty -> .
    (12) modifier -> . PUBLIC STATIC
    (13) modifier -> . PRIVATE STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE
    (16) modifier -> . STATIC
    (17) modifier -> . empty

    RBRACE          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17

    class_body_decl                shift and go to state 9
    class_body_sub_decls           shift and go to state 10
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    empty                          shift and go to state 14
    modifier                       shift and go to state 15

state 8

    (4) class_decl -> CLASS ID EXTENDS ID . LBRACE class_body_decl RBRACE

    LBRACE          shift and go to state 19


state 9

    (5) class_decl -> CLASS ID LBRACE class_body_decl . RBRACE

    RBRACE          shift and go to state 20


state 10

    (6) class_body_decl -> class_body_sub_decls .

    RBRACE          reduce using rule 6 (class_body_decl -> class_body_sub_decls .)


state 11

    (7) class_body_sub_decls -> field_decl . SEMICOLON class_body_sub_decls

    SEMICOLON       shift and go to state 21


state 12

    (8) class_body_sub_decls -> method_decl . class_body_sub_decls
    (7) class_body_sub_decls -> . field_decl SEMICOLON class_body_sub_decls
    (8) class_body_sub_decls -> . method_decl class_body_sub_decls
    (9) class_body_sub_decls -> . constructor_decl class_body_sub_decls
    (10) class_body_sub_decls -> . empty
    (11) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LPAREN RPAREN block
    (29) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) method_decl -> . modifier ID LPAREN RPAREN block
    (33) method_decl -> . modifier ID LPAREN formals RPAREN block
    (34) constructor_decl -> . modifier ID LPAREN RPAREN block
    (35) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (1) empty -> .
    (12) modifier -> . PUBLIC STATIC
    (13) modifier -> . PRIVATE STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE
    (16) modifier -> . STATIC
    (17) modifier -> . empty

    RBRACE          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17

    method_decl                    shift and go to state 12
    class_body_sub_decls           shift and go to state 22
    field_decl                     shift and go to state 11
    constructor_decl               shift and go to state 13
    empty                          shift and go to state 14
    modifier                       shift and go to state 15

state 13

    (9) class_body_sub_decls -> constructor_decl . class_body_sub_decls
    (7) class_body_sub_decls -> . field_decl SEMICOLON class_body_sub_decls
    (8) class_body_sub_decls -> . method_decl class_body_sub_decls
    (9) class_body_sub_decls -> . constructor_decl class_body_sub_decls
    (10) class_body_sub_decls -> . empty
    (11) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LPAREN RPAREN block
    (29) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) method_decl -> . modifier ID LPAREN RPAREN block
    (33) method_decl -> . modifier ID LPAREN formals RPAREN block
    (34) constructor_decl -> . modifier ID LPAREN RPAREN block
    (35) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (1) empty -> .
    (12) modifier -> . PUBLIC STATIC
    (13) modifier -> . PRIVATE STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE
    (16) modifier -> . STATIC
    (17) modifier -> . empty

    RBRACE          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17

    constructor_decl               shift and go to state 13
    class_body_sub_decls           shift and go to state 23
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    empty                          shift and go to state 14
    modifier                       shift and go to state 15

state 14

    (10) class_body_sub_decls -> empty .
    (17) modifier -> empty .

    RBRACE          reduce using rule 10 (class_body_sub_decls -> empty .)
    VOID            reduce using rule 17 (modifier -> empty .)
    ID              reduce using rule 17 (modifier -> empty .)
    INT             reduce using rule 17 (modifier -> empty .)
    FLOAT           reduce using rule 17 (modifier -> empty .)
    BOOLEAN         reduce using rule 17 (modifier -> empty .)


state 15

    (11) field_decl -> modifier . var_decl
    (28) method_decl -> modifier . type ID LPAREN RPAREN block
    (29) method_decl -> modifier . VOID ID LPAREN RPAREN block
    (30) method_decl -> modifier . type ID LPAREN formals RPAREN block
    (31) method_decl -> modifier . VOID ID LPAREN formals RPAREN block
    (32) method_decl -> modifier . ID LPAREN RPAREN block
    (33) method_decl -> modifier . ID LPAREN formals RPAREN block
    (34) constructor_decl -> modifier . ID LPAREN RPAREN block
    (35) constructor_decl -> modifier . ID LPAREN formals RPAREN block
    (18) var_decl -> . type variables
    (19) type -> . INT
    (20) type -> . FLOAT
    (21) type -> . BOOLEAN
    (22) type -> . VOID
    (23) type -> . ID

    VOID            shift and go to state 27
    ID              shift and go to state 26
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30

    var_decl                       shift and go to state 24
    type                           shift and go to state 25

state 16

    (12) modifier -> PUBLIC . STATIC
    (14) modifier -> PUBLIC .

    STATIC          shift and go to state 31
    VOID            reduce using rule 14 (modifier -> PUBLIC .)
    ID              reduce using rule 14 (modifier -> PUBLIC .)
    INT             reduce using rule 14 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 14 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 14 (modifier -> PUBLIC .)


state 17

    (16) modifier -> STATIC .

    VOID            reduce using rule 16 (modifier -> STATIC .)
    ID              reduce using rule 16 (modifier -> STATIC .)
    INT             reduce using rule 16 (modifier -> STATIC .)
    FLOAT           reduce using rule 16 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 16 (modifier -> STATIC .)


state 18

    (13) modifier -> PRIVATE . STATIC
    (15) modifier -> PRIVATE .

    STATIC          shift and go to state 32
    VOID            reduce using rule 15 (modifier -> PRIVATE .)
    ID              reduce using rule 15 (modifier -> PRIVATE .)
    INT             reduce using rule 15 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 15 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 15 (modifier -> PRIVATE .)


state 19

    (4) class_decl -> CLASS ID EXTENDS ID LBRACE . class_body_decl RBRACE
    (6) class_body_decl -> . class_body_sub_decls
    (7) class_body_sub_decls -> . field_decl SEMICOLON class_body_sub_decls
    (8) class_body_sub_decls -> . method_decl class_body_sub_decls
    (9) class_body_sub_decls -> . constructor_decl class_body_sub_decls
    (10) class_body_sub_decls -> . empty
    (11) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LPAREN RPAREN block
    (29) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) method_decl -> . modifier ID LPAREN RPAREN block
    (33) method_decl -> . modifier ID LPAREN formals RPAREN block
    (34) constructor_decl -> . modifier ID LPAREN RPAREN block
    (35) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (1) empty -> .
    (12) modifier -> . PUBLIC STATIC
    (13) modifier -> . PRIVATE STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE
    (16) modifier -> . STATIC
    (17) modifier -> . empty

    RBRACE          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17

    class_body_decl                shift and go to state 33
    class_body_sub_decls           shift and go to state 10
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    empty                          shift and go to state 14
    modifier                       shift and go to state 15

state 20

    (5) class_decl -> CLASS ID LBRACE class_body_decl RBRACE .

    CLASS           reduce using rule 5 (class_decl -> CLASS ID LBRACE class_body_decl RBRACE .)
    $end            reduce using rule 5 (class_decl -> CLASS ID LBRACE class_body_decl RBRACE .)


state 21

    (7) class_body_sub_decls -> field_decl SEMICOLON . class_body_sub_decls
    (7) class_body_sub_decls -> . field_decl SEMICOLON class_body_sub_decls
    (8) class_body_sub_decls -> . method_decl class_body_sub_decls
    (9) class_body_sub_decls -> . constructor_decl class_body_sub_decls
    (10) class_body_sub_decls -> . empty
    (11) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LPAREN RPAREN block
    (29) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) method_decl -> . modifier ID LPAREN RPAREN block
    (33) method_decl -> . modifier ID LPAREN formals RPAREN block
    (34) constructor_decl -> . modifier ID LPAREN RPAREN block
    (35) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (1) empty -> .
    (12) modifier -> . PUBLIC STATIC
    (13) modifier -> . PRIVATE STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE
    (16) modifier -> . STATIC
    (17) modifier -> . empty

    RBRACE          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17

    field_decl                     shift and go to state 11
    class_body_sub_decls           shift and go to state 34
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    empty                          shift and go to state 14
    modifier                       shift and go to state 15

state 22

    (8) class_body_sub_decls -> method_decl class_body_sub_decls .

    RBRACE          reduce using rule 8 (class_body_sub_decls -> method_decl class_body_sub_decls .)


state 23

    (9) class_body_sub_decls -> constructor_decl class_body_sub_decls .

    RBRACE          reduce using rule 9 (class_body_sub_decls -> constructor_decl class_body_sub_decls .)


state 24

    (11) field_decl -> modifier var_decl .

    SEMICOLON       reduce using rule 11 (field_decl -> modifier var_decl .)


state 25

    (28) method_decl -> modifier type . ID LPAREN RPAREN block
    (30) method_decl -> modifier type . ID LPAREN formals RPAREN block
    (18) var_decl -> type . variables
    (24) variables -> . variable
    (25) variables -> . variables COMMA variable
    (26) variables -> . empty
    (27) variable -> . ID
    (1) empty -> .

    ID              shift and go to state 35
    COMMA           reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)

    variables                      shift and go to state 36
    variable                       shift and go to state 37
    empty                          shift and go to state 38

state 26

    (32) method_decl -> modifier ID . LPAREN RPAREN block
    (33) method_decl -> modifier ID . LPAREN formals RPAREN block
    (34) constructor_decl -> modifier ID . LPAREN RPAREN block
    (35) constructor_decl -> modifier ID . LPAREN formals RPAREN block
    (23) type -> ID .
